Fix WebKit CSS filter for greying out interface elements during tutorial - it had broken in latest Chrome v26

--- a/less/global.less
+++ b/less/global.less
@@ -455,9 +455,9 @@ body:-ms-full-screen        .fullscreen { .tb-fullscreen(); }
 
 //for fading out objects during the tutorial
 .fade {
-	-webkit-filter: grayscale(100%) brightness(-0.15) contrast(50%);
-//    -moz-filter: grayscale(100%); // brightness(-0.15) contrast(50%);
-//    filter: grayscale(1);// brightness(-0.15) contrast(50%);
+	-webkit-filter: grayscale(100%) contrast(50%); //brightness(0.85)
+//    -moz-filter: grayscale(100%) brightness(0.85) contrast(50%);
+//    filter: grayscale(1) brightness(0.85) contrast(50%);
 
 }
 
